# 3806ICT_Assignment2

./: README.md
turtlebot3_explorer/: CMakeLists.txt  package.xml
turtlebot3_explorer/config/: explorer_params.yaml  rosconsole.config
turtlebot3_explorer/include/turtlebot3_explorer/: frontier_detector.h  frontier_planner.h  plan_executor.h  sensor_interface.h
turtlebot3_explorer/launch/: explorer.launch  master.launch  rescue_robot.launch  single_robot.launch  viz.launch
turtlebot3_explorer/launch/modules/: frontier_detector.launch  gazebo.launch  map_processor.launch  rviz.launch  sensor_interface.launch  slam.launch
turtlebot3_explorer/msg/: AgentState.msg  ExecutionStatus.msg  ExplorationPlan.msg  SensorData.msg
turtlebot3_explorer/rviz/: config.rviz  multi_robot_exploration.rviz
turtlebot3_explorer/scripts/: llm_frontier_selector.py  llm_rescue_planner.py  map_merger.py  performance_tracker.py  rescue_robot.py  robot_coordinator.py  robot_utils.py  slam_initializer.py
turtlebot3_explorer/src/: astar_planner.cpp  frontier_detector.cpp  frontier_planner.cpp  heuristic_calculator.cpp  heuristic_visualiser.cpp  math_utils.hpp  path_follower.cpp  rescue_planner.cpp  survivor_manager.cpp
turtlebot3_explorer/src/cpp/: frontier_detector.cpp  plan_executor.cpp  sensor_interface.cpp  temp.cpp
turtlebot3_explorer/src/python/: exploration_coordinator.py  llm_planner.py  map_merger.py  map_processor.py  map_saver_node.py  multi_robot_controller.py
turtlebot3_explorer/srv/: CheckSurvivor.srv  FollowPath.srv  GetPathCosts.srv  GetSurvivors.srv  OptimizePath.srv  SelectFrontiers.srv  SelectFrontiersNew.srv
turtlebot3_explorer/worlds/: tunnel_maze.world
turtlebot3_explorer_broken_full/turtlebot3_explorer/: CMakeLists.txt  package.xml
turtlebot3_explorer_broken_full/turtlebot3_explorer/config/: params.yaml
turtlebot3_explorer_broken_full/turtlebot3_explorer/launch/: master.launch  rescue_robot.launch  single_robot.launch  test_rescue.launch
turtlebot3_explorer_broken_full/turtlebot3_explorer/rviz/: config.rviz  new.rviz
turtlebot3_explorer_broken_full/turtlebot3_explorer/scripts/: llm_frontier_selector.py  llm_rescue_planner.py  rescue_robot.py  robot_coordinator.py  slam_initializer.py  trigger_rescue.py
turtlebot3_explorer_broken_full/turtlebot3_explorer/src/: astar_planner.cpp  frontier_detector.cpp  survivor_manager.cpp
turtlebot3_explorer_broken_full/turtlebot3_explorer/srv/: PlanPath.srv  PlanRescuePath.srv
turtlebot3_explorer_broken_full/turtlebot3_explorer/worlds/: tunnel_maze.world
turtlebot3_explorer_only_working/turtlebot3_explorer/: CMakeLists.txt
turtlebot3_explorer_only_working/turtlebot3_explorer/launch/: integrated_exploration.launch  master.launch
turtlebot3_explorer_only_working/turtlebot3_explorer/msg/: AgentState.msg  SensorData.msg
turtlebot3_explorer_only_working/turtlebot3_explorer/rviz/: config.rviz
turtlebot3_explorer_only_working/turtlebot3_explorer/src/cpp/: frontier_detector.cpp  frontier_planner.cpp
turtlebot3_explorer_only_working/turtlebot3_explorer/src/python/: exploration_monitor.py  initialize_slam.py  map_merger.py  multi_robot_controller.py
turtlebot3_rescue/: CMakeLists.txt  README.txt  package.xml
turtlebot3_rescue/launch/: rescue.launch
turtlebot3_rescue/maps/: test_map_large.pgm  test_map_large.yaml
turtlebot3_rescue/scripts/: llm_service.py
turtlebot3_rescue/src/: rescue_planner.cpp
